--- a/src/Hwm/Hwm.csproj
+++ b/src/Hwm/Hwm.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataImportService\DataImportService.csproj" />
+  </ItemGroup>
+
 </Project>
